--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <ul class="tech-list">
                             <li>Geolocalização</li>
                             <li>Push Notifications</li>
-                            <li>Real-time Data</li>
+                            <li>App Inventor</li>
                         </ul>
                         <div class="project-links">
                             <a href="https://www.cps.sp.gov.br/etec-de-taboao-da-serra-participa-da-olimpiada-brasileira-de-tecnologia/" target="_blank" class="link-external">Ver Detalhes →</a>
@@ -146,7 +146,7 @@
                 <h2>Vamos construir algo relevante?</h2>
                 <p>Estou aberto a oportunidades como Desenvolvedor Full Stack onde eu possa aplicar maturidade técnica e foco em escalabilidade.</p>
                 <div class="contact-links">
-                    <a href="mailto:seuemail@exemplo.com" class="btn-primary">Enviar E-mail</a>
+                    <a href="mailto:deryckdelucca1@gmail.com" class="btn-primary">Enviar E-mail</a>
                     <div class="social-links">
                         <a href="https://github.com/DeryckDeLucca" target="_blank">GitHub</a>
                         <a href="https://www.linkedin.com/in/deryck-de-lucca-001760392/" target="_blank">LinkedIn</a>
