Minor changes inthe card -Estufa Inteligente-, add button -Ver Detalhes →-

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                             <li>Sensores de Umidade</li>
                             <li>Sistemas Embarcados</li>
                         </ul>
+                        <div class="project-links">
+                            <a href="https://www.youtube.com/watch?v=wMnSSRzsLHk" target="_blank" class="link-external">Ver Detalhes →</a>
+                        </div>
                     </div>
                 </article>
             </div>
